[package]
name = "bootloader_linker"
version = "0.1.2"
edition = "2021"
description = "A quick and easy program that links your executables created using bootloader_api with the actual bootloader."
license = "MIT OR Apache-2.0"
keywords = ["bootloader", "os-dev", "bootloader_api"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
repository = "https://github.com/mysteriouslyseeing/bootloader_linker"

[dependencies]
bootloader = { version = "0.11.4" }
clap = { version = "4.4.6", features = ["derive"] }
ovmf-prebuilt = "0.1.0-alpha.1"
env_logger = "0.10.0"
log = "0.4.20"
